--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -6,6 +6,9 @@
     //DefaultLayout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --black: black;
+    --white: #fff;
+    --text-color: #333;
 }
 
 * {
@@ -23,4 +26,15 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizespeed;
+    color: var(--text-color);
+}
+
+button, input, [tabindex]{
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
